# allophonics

./: .gitignore  CHANGELOG.md  allophonics.cabal  features.csv  hie.yaml
app/: Phone.hs  Phoneme.hs
