cabal-version:      2.4
name:               allophonics
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: Program for determining which phones are allophones in a corpus

-- A longer description of the package.
description: Examines a corpus of words transcribed in IPA, produces report of what the phonemes are, what the allophones are, and what the phonotactics are for the source language.

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
license:            GPL-2.0-or-later
author:             Daniel K Lyons
maintainer:         fusion@storytotell.org

-- A copyright notice.
copyright: (C) 2021 Daniel K Lyons and Tyler Cecil
-- category:
extra-source-files: CHANGELOG.md

executable allophonics
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: Phone, Phoneme

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
          base ^>=4.14.1.0
        , containers ^>=0.6.2.1
        , cassava ^>=0.5.2.0
        , bytestring ^>= 0.10.12.0
        , vector ^>=0.12.3.0
        , text ^>=1.2.4.1
        , unordered-containers ^>=0.2.14.0

    hs-source-dirs:   app
    default-language: Haskell2010
